<resources>
    <string name="app_name">NBA Team</string>

    <string name="title_team_list">Team List</string>
    <string name="title_team_details">Team Details</string>

    <string name="team_wins">Wins %1s</string>
    <string name="team_losses">Losses %1s</string>

    <string name="player_position">Position %1s</string>
    <string name="player_number">Number %1s</string>

    <string name="action_a_z">A-Z</string>
    <string name="action_z_a">Z-A</string>
    <string name="action_wins">Wins</string>
    <string name="action_wins_descending">Wins Descending</string>
    <string name="action_losses">Losses</string>
    <string name="action_losses_descending">Losses Descending</string>
    <string name="btn_retry">Retry</string>

</resources>
